{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 12,
  "lineage": "b2ce87a1-f903-1ccf-079e-eacdc1654c58",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e0ca9924195beba",
            "arn": "arn:aws:ec2:ap-south-1:219998481237:instance/i-04354cf9698632957",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04354cf9698632957",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02798d2c1bff799c8",
            "private_dns": "ip-10-20-1-116.ap-south-1.compute.internal",
            "private_ip": "10.20.1.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f5ab20da4fa83e5d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e8a28ce36c4390d5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c3ddd0c7b7d1e22",
            "tags": {
              "Name": "PublicServer-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e8a28ce36c4390d5"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e0ca9924195beba",
            "arn": "arn:aws:ec2:ap-south-1:219998481237:instance/i-08b5191d7db1d1411",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b5191d7db1d1411",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db78dccd1cb1bdfc",
            "private_dns": "ip-10-20-2-28.ap-south-1.compute.internal",
            "private_ip": "10.20.2.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05795443584266f6f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e8a28ce36c4390d5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0150ea6b67ef5bca2",
            "tags": {
              "Name": "PublicServer-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e8a28ce36c4390d5"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:219998481237:internet-gateway/igw-0e82e7a0c63dae1d9",
            "id": "igw-0e82e7a0c63dae1d9",
            "owner_id": "219998481237",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-00fc837e31b391395"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ace7e5cd48c728df",
            "owner_id": "219998481237",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e82e7a0c63dae1d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-00fc837e31b391395"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0760406fd69870206",
            "route_table_id": "rtb-0ace7e5cd48c728df",
            "subnet_id": "subnet-03c3ddd0c7b7d1e22"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063f1addd4894c76a",
            "route_table_id": "rtb-0ace7e5cd48c728df",
            "subnet_id": "subnet-0150ea6b67ef5bca2"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:219998481237:security-group/sg-0e8a28ce36c4390d5",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8a28ce36c4390d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "219998481237",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00fc837e31b391395"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:219998481237:subnet/subnet-0f4f36025a7abdc17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-0f4f36025a7abdc17",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "219998481237",
            "tags": {
              "Name": "PrivateSubnet-1"
            },
            "vpc_id": "vpc-00fc837e31b391395"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:219998481237:subnet/subnet-03c3ddd0c7b7d1e22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-03c3ddd0c7b7d1e22",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "219998481237",
            "tags": {
              "Name": "PublicSubnet-1"
            },
            "vpc_id": "vpc-00fc837e31b391395"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:219998481237:subnet/subnet-0150ea6b67ef5bca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0150ea6b67ef5bca2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "219998481237",
            "tags": {
              "Name": "PublicSubnet-2"
            },
            "vpc_id": "vpc-00fc837e31b391395"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:219998481237:vpc/vpc-00fc837e31b391395",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-080ad7cd910de57e0",
            "default_route_table_id": "rtb-00e06968a68aa8906",
            "default_security_group_id": "sg-0c216482b31e14abe",
            "dhcp_options_id": "dopt-3d10ef56",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00fc837e31b391395",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00e06968a68aa8906",
            "owner_id": "219998481237",
            "tags": {
              "Name": "TerraVPC"
            }
          }
        }
      ]
    }
  ]
}